--- a/index.html
+++ b/index.html
@@ -4,33 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
+    <title>This Is A Rock Paper Scissors Game</title>
   </head>
   <body>
     <h1>This Is A Rock Paper Scissors Game</h1>
-    <script>
-      function computerPlay() {
-        // Any num between 1 and 3, including 3
-        const computerGuess = Math.floor(Math.random() * 3) + 1;
-        if (computerGuess === 1) {
-          return "Rock";
-        } else if (computerGuess === 2) {
-          return "Paper";
-        } else if (computerGuess === 3) {
-          return "Scissors";
-        }
-      }
-      // you are at step 4 on the odin project
-      function playRound(playerSelection, computerSelection) {
-        return "You lose! Paper beats Rock";
-      }
-
-      game = () => {
-        playRound();
-        for (let i = 0; i < 5; i++) {
-          console.log(i);
-        }
-      };
-    </script>
+    <script src="/app.js"></script>
   </body>
 </html>
