--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>This Is A Rock Paper Scissors Game</h1>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
     <script src="/app.js"></script>
   </body>
 </html>
