Separating buttons with div

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <h1>This Is A Rock Paper Scissors Game</h1>
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <div id="choices">
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
     <script src="/app.js"></script>
   </body>
 </html>
