--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <h1>This Is A Rock Paper Scissors Game</h1>
-    <div id="choices">
-      <button>Rock</button>
-      <button>Paper</button>
-      <button>Scissors</button>
+    <div>
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
     </div>
     <script src="/app.js"></script>
   </body>
