--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This Is A Rock Paper Scissors Game</title>
+    <title>Rock paper Scissors Game</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>This Is A Rock Paper Scissors Game</h1>
-    <div>
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
-    </div>
-    <script src="/app.js"></script>
+    <h1>Rock Paper Scissos Game</h1>
+    <script src="/scripts.js"></script>
   </body>
 </html>
