--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>This Is A Rock Paper Scissors Game</h1>
-    <script src="/app.js"></script>
+    <script src="/scripts.js"></script>
   </body>
 </html>
