--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>Rock Paper Scissos Game</h1>
+    <h1>Rock Paper Scissors Game</h1>
     <div>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
