--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
     </div>
-    <div></div>
+    <div>
+      <h2>Results:</h2>
+    </div>
     <script src="/scripts.js"></script>
   </body>
 </html>
