--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
   <body>
     <h1>Rock Paper Scissors Game</h1>
     <div>
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+      <div id="rock">
+        <img src="/images/rock.png" alt="Emoji of rock" />
+      </div>
+      <div id="paper">
+        <img src="/images/paper.png" alt="Emoji of paper." />
+      </div>
+      <div id="scissors">
+        <img src="/images/scissors.png" alt="Emoji of scissors." />
+      </div>
     </div>
-    <div>
-      <h2>Results:</h2>
+    <div id="results">
+      <p>Results:</p>
     </div>
     <script src="/scripts.js"></script>
   </body>
