Cleaned up and added some notes to clarify.
Got the problem to display the winner of one round, now I am trying to make it work for 5 rounds.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
       </button>
     </div>
     <div class="container">
-      <div class="playerScore">
-        <p>Player Score:</p>
-      </div>
-      <div class="computerScore"></div>
-        <p>Computer Score:</p>
-      </div>
+      <div class="content"></div>
     </div>
     <script src="/scripts.js"></script>
   </body>
