--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </div>
     <div class="container">
       <div class="content"></div>
+      <div class="playerScore"></div>
+      <div class="computerScore"></div>
+      <div class="finalScore"></div>
     </div>
     <script src="/scripts.js"></script>
   </body>
