--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
       </button>
     </div>
     <div class="container">
-      <div class="content"></div>
-      <!-- <div class="playerScore"></div>
-      <div class="computerScore"></div>
-      <div class="finalScore"></div> -->
+      <div id="roundResults"></div>
     </div>
     <script src="/scripts.js"></script>
   </body>
