--- a/index.html
+++ b/index.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock paper Scissors Game</title>
+    <title>Rock paper scissors</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>Rock Paper Scissors Game</h1>
-    <div class="images">
-      <button id="rock">
-        <img src="images/rock.png" alt="Picture of a rock" />
-      </button>
-      <button id="paper">
-        <img src="images/paper.png" alt="Picture of paper" />
-      </button>
-      <button id="scissors">
-        <img src="images/scissors.png" alt="Picture of scissors" />
-      </button>
-    </div>
-    <div class="container">
-      <div id="roundResults"></div>
-    </div>
     <script src="/scripts.js"></script>
   </body>
 </html>
