--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
+    </div>
+
     <script src="/scripts.js"></script>
   </body>
 </html>
