Got the game displaying but I keep overwriting the final score

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
     </div>
-    <div class="results"></div>
+    <div class="results">
+      <p class="round-result"></p>
+      <p class="player-score"></p>
+      <p class="computer-score"></p>
+      <p class="final-score"></p>
+    </div>
 
     <script src="/scripts.js"></script>
   </body>
